# pipo

./: .gitignore  .gitmodules  README.md
docs/: _pi_po_8h.html  _pi_po_8h_source.html  _pi_po_bands_8h.html  _pi_po_bands_8h_source.html  _pi_po_bayes_filter_8h.html  _pi_po_bayes_filter_8h_source.html  _pi_po_biquad_8h.html  _pi_po_biquad_8h_source.html  _pi_po_chop_8h.html  _pi_po_chop_8h_source.html  _pi_po_collection_8h.html  _pi_po_collection_8h_source.html  _pi_po_const_8h.html  _pi_po_const_8h_source.html  _pi_po_dct_8h.html  _pi_po_dct_8h_source.html  _pi_po_delta_8h.html  _pi_po_delta_8h_source.html  _pi_po_fft_8h.html  _pi_po_fft_8h_source.html  _pi_po_finite_dif_8h.html  _pi_po_finite_dif_8h_source.html  _pi_po_gate_8h.html  _pi_po_gate_8h_source.html  _pi_po_graph_8h.html  _pi_po_graph_8h_source.html  _pi_po_host_8h.html  _pi_po_host_8h_source.html  _pi_po_identity_8h.html  _pi_po_identity_8h_source.html  _pi_po_lpc_8h.html  _pi_po_lpc_8h_source.html  _pi_po_lpc_formants_8h.html  _pi_po_lpc_formants_8h_source.html  _pi_po_median_8h.html  _pi_po_median_8h_source.html  _pi_po_mel_8h.html  _pi_po_mel_8h_source.html  _pi_po_mfcc_8h.html  _pi_po_mfcc_8h_source.html  (+151 more)
modules/: PiPoBands.h  PiPoBasic.h  PiPoBayesFilter.h  PiPoBiquad.h  PiPoBranch.h  PiPoChop.h  PiPoConst.h  PiPoConstantQ.h  PiPoDct.h  PiPoDelta.h  PiPoDescr.h  PiPoFft.h  PiPoFiniteDif.h  PiPoGate.h  PiPoIdentity.h  PiPoIdesc.h  PiPoIndex.h  PiPoIntensity.h  PiPoIrcamDesc.h  PiPoJs.h  PiPoLoudness.h  PiPoLpc.h  PiPoLpcFormants.h  PiPoMaximChroma.h  PiPoMeanStddev.h  PiPoMedian.h  PiPoMel.h  PiPoMfcc.h  PiPoMinMax.h  PiPoMoments.h  PiPoMvavrg.h  PiPoNorm.h  PiPoOnseg.h  PiPoOrientation.h  PiPoPeaks.h  PiPoPsy.h  PiPoResample.h  PiPoRms.h  PiPoSavitzkyGolay.h  PiPoScale.h  (+15 more)
modules/mimo/TTL/: CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  README
modules/mimo/TTL/examples/hesimplest/: README  main.cpp  qwe.gnu
modules/mimo/TTL/include/ttl/: api.h  mainpage_ttl.h  ttl.h  ttl_constr.h  ttl_util.h
modules/mimo/TTL/include/ttl/halfedge/: HeDart.h  HeTraits.h  HeTriang.h  main_he_ref.h  mainpage_hed.h
modules/mimo/TTL/include/ttl/utils/: Handle.h  HandleId.h
modules/mimo/TTL/src/halfedge/: HeTriang.cpp
modules/mimo/TTL/src/utils/: HandleId.cpp
test/: PiPoTestHost.h  PiPoTestReceiver.h  mimo-pca-test.cpp  mimo-test.cpp  pipo-benchmark.cpp  pipo-chop-list-test.cpp  pipo-chop-test.cpp  pipo-collection-test.cpp  (+17 more)
(+575 files in other folders)
